--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.5.3",
@@ -26,8 +27,10 @@
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
+    "redux": "^3.7.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "uuid": "^8.1.0",
     "validator": "^13.1.1",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.11.0"
