--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-addons-shallow-compare": "15.6.0",
-    "react-dates": "^21.8.0",
+    "react-dates": "12.7.0",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
