--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "webpack",
     "dev-server": "webpack-dev-server",
     "build-old": "webpack --watch",
-    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
+    "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
+    "test": "jest"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -21,6 +22,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.5.3",
+    "jest": "20.0.4",
     "live-server": "^1.2.1",
     "moment": "^2.26.0",
     "node-sass": "^4.14.1",
