--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev-server": "webpack-dev-server",
     "build-old": "webpack --watch",
     "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch",
-    "test": "jest"
+    "test": "jest --config=jest.config.json"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
@@ -22,10 +22,14 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^3.5.3",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
     "live-server": "^1.2.1",
     "moment": "^2.26.0",
     "node-sass": "^4.14.1",
+    "raf": "3.3.2",
     "react": "^16.13.1",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
